# crop-hypr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PKGBUILD  README.ja.md  README.md
.github/instructions/: genral.instructions.md
.github/workflows/: release.yml
PKGBUILD/: prepare.sh
github/: copilot-instructions.md
github/instructions/: genral.instructions.md
src/: capture.rs  clipboard.rs  cmd.rs  config.rs  error.rs  freeze_state.rs  hyprland.rs  lib.rs  main.rs  notify.rs  portal.rs  screencopy.rs
src/backend/: mod.rs
src/backend/capture/: mod.rs  portal.rs  screencopy.rs
src/backend/system/: clipboard.rs  cmd.rs  hyprland.rs  mod.rs  notify.rs
src/cli/: capture.rs
src/commands/: capture.rs  mod.rs
src/config/: colors.rs  mod.rs  notifications.rs
src/core/: error.rs  geometry.rs  mod.rs  state.rs  types.rs
src/core/config/: general.rs  mod.rs  ui.rs
src/domain/: error.rs  geometry.rs  mod.rs  state.rs  types.rs
src/domain/config/: freeze.rs  mod.rs  notifications.rs
src/freeze/: app.rs  mod.rs  overlay.rs
src/platform/: mod.rs
src/platform/capture/: mod.rs  portal.rs  screencopy.rs
src/platform/system/: clipboard.rs  cmd.rs  hyprland.rs  mod.rs  notify.rs
src/ui/: freeze_state.rs  mod.rs
src/ui/freeze/: app.rs  mod.rs
