[package]
name = "crop-hypr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crop-hypr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
iced = { version = "0.14", features = ["image", "canvas"] }
iced_layershell = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
