[package]
name = "crop-hypr"
version = "0.2.0"
edition = "2024"
authors = ["ry2x"]
description = "A fast, Hyprland-native screenshot tool written in Rust."
readme = "README.md"
repository = "https://github.com/ry2x/crop-hypr"

[[bin]]
name = "crop-hypr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive", "wrap_help"] }
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
iced = { version = "0.14", features = ["image", "canvas", "wgpu"] }
iced_layershell = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
